manifest/deploy.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supplier-simulator
  namespace: punchout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supplier-simulator
  template:
    metadata:
      labels:
        app: supplier-simulator
    spec:
      containers:
      - name: supplier-simulator
        imagePullPolicy: Always
        image: zahcen/supplier-simulator:latest
        ports:
          - containerPort: 5000
        env:
          - name: FLASK_APP
            value: app.py  # Update if your file is named differently
          - name: STORE_URL
            value: "https://supplier.zitaconseil.fr/punchout/store"
      imagePullSecrets:
        - name: dockerhub-secret
