manifest/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: punchout-gateway
  namespace: punchout
spec:
  selector:
    app: punchout-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
